--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,7 @@
           "browsers": [
             "last 2 Chrome versions",
             "last 2 Firefox versions",
-            "last 2 Edge versions",
+            "Explorer 11"
           ]
         },
       }],
