--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "./dist/bundle.js",
   "scripts": {
     "build": "webpack --config webpack.config.prod.js",
+    "build:dev": "webpack --config webpack.config.js",
     "watch": "webpack --watch --config webpack.config.js"
   },
   "dependencies": {
@@ -17,6 +18,10 @@
     "@babel/preset-env": "^7.0.0-beta.36",
     "@babel/preset-react": "^7.0.0-beta.36",
     "babel-loader": "8.0.0-beta.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "webpack": "^3.10.0"
   }
 }
