--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "watch": "webpack --watch --config webpack.config.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-markdown": "^3.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.36",
